refactor header and feature section for improved layout and clarity

--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body>
-    <!-- Header -->
-    <header class="glass header-slide-in">
-        <h1 class="title">CodeForge++</h1>
-        <nav>
-            <ul class="nav-menu">
-                <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-                <li><a href="ide.html" class="nav-link">Code Editor</a></li>
-                <li><a href="progress.html" class="nav-link">Progress</a></li>
-                <li><a href="resources.html" class="nav-link">Resources</a></li>
-            </ul>
-        </nav>
+    <!-- Header with Improved Navigation -->
+    <header class="glass header-slide-in compact-header">
+        <div class="nav-container">
+            <h1 class="logo">CodeForge++</h1>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+                    <li><a href="ide.html" class="nav-link">Code Editor</a></li>
+                    <li><a href="progress.html" class="nav-link">Progress</a></li>
+                    <li><a href="resources.html" class="nav-link">Resources</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <!-- Hero Section -->
@@ -31,15 +33,15 @@
     <!-- Features Section -->
     <section class="features">
         <div class="feature-card glass card-hover floating-card">
-            <h3>💻 Interactive Code Editor</h3>
+            <h3>Interactive Code Editor</h3>
             <p>Write, compile, and optimize C++ code in real time.</p>
         </div>
         <div class="feature-card glass card-hover floating-card">
-            <h3>📊 Track Your Progress</h3>
+            <h3>Track Your Progress</h3>
             <p>Monitor your learning journey with gamification and insights.</p>
         </div>
         <div class="feature-card glass card-hover floating-card">
-            <h3>🧠 AI-Powered Code Review</h3>
+            <h3>AI-Powered Code Review</h3>
             <p>Get instant AI feedback to improve your code efficiency.</p>
         </div>
     </section>
