add progress tracking page, enhance README, and implement AI code improvement suggestions

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CodeForge++ | Home</title>
-    <link rel="stylesheet" href="styles/enhanced_styles.css">
-    <link rel="stylesheet" href="styles/animations.css">
+    <link rel="stylesheet" href="styles/enhanced_styles.css" />
+    <link rel="stylesheet" href="styles/animations.css" />
 </head>
 <body>
-    <!-- Header with Improved Navigation -->
+    <!-- Header with Modern Navigation -->
     <header class="glass header-slide-in compact-header">
         <div class="nav-container">
             <h1 class="logo">CodeForge++</h1>
             <nav>
                 <ul class="nav-menu">
                     <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-                    <li><a href="ide.html" class="nav-link">Code Editor</a></li>
                     <li><a href="progress.html" class="nav-link">Progress</a></li>
                     <li><a href="resources.html" class="nav-link">Resources</a></li>
+                    <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,36 +25,38 @@
 
     <!-- Hero Section -->
     <section class="index-hero glass fade-in">
-        <h1 class="hero-title">Master C++ with Interactive Learning</h1>
-        <p class="scale-up">Join thousands of developers mastering C++ with real-world exercises, AI-powered code reviews, and an interactive coding environment.</p>
-        <a href="exercises.html" class="btn btn-glow">Start Practicing</a>
+        <h1 class="hero-title">Elevate Your C++ Skills</h1>
+        <p class="scale-up">Explore advanced concepts, challenge yourself with real-time tasks, and track your progression all in one place.</p>
+        <a href="exercises.html" class="btn btn-glow">Get Started</a>
     </section>
 
-    <!-- Features Section -->
+    <!-- Featured Highlights -->
     <section class="features">
         <div class="feature-card glass card-hover floating-card">
-            <h3>Interactive Code Editor</h3>
-            <p>Write, compile, and optimize C++ code in real time.</p>
+            <h3>Practical Exercises</h3>
+            <p>Build real-world solutions and refine your approach with guided tasks.</p>
         </div>
         <div class="feature-card glass card-hover floating-card">
-            <h3>Track Your Progress</h3>
-            <p>Monitor your learning journey with gamification and insights.</p>
+            <h3>Smart Progress Tracking</h3>
+            <p>Analyze your development path with interactive charts and stats.</p>
         </div>
         <div class="feature-card glass card-hover floating-card">
-            <h3>AI-Powered Code Review</h3>
-            <p>Get instant AI feedback to improve your code efficiency.</p>
+            <h3>AI Code Review</h3>
+            <p>Receive instant suggestions to optimize and improve your code.</p>
         </div>
     </section>
 
-    <!-- Call-to-Action Section -->
+    <!-- Call-to-Action -->
     <section class="cta glass fade-in">
-        <h2>Ready to Elevate Your C++ Skills?</h2>
-        <a href="signup.html" class="btn btn-glow">Join Now</a>
+        <h2>Ready for the Next Challenge?</h2>
+        <a href="exercises.html" class="btn btn-glow">Jump In</a>
     </section>
 
     <!-- Footer -->
     <footer>
         <p>© 2025 CodeForge++. All rights reserved.</p>
     </footer>
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
