--- a/portfolio.html
+++ b/portfolio.html
@@ -3,20 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>CodeForge++ | Portfolio</title>
     <link rel="stylesheet" href="styles/enhanced_styles.css">
     <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body>
-    <header>
-        <h1>About Me / Portfolio</h1>
+    <header class="glass header-slide-in compact-header">
+        <div class="nav-container">
+            <h1 class="logo">CodeForge++</h1>
+            <nav>
+                <ul class="nav-menu">
+                    <li><a href="index.html" class="nav-link">Home</a></li>
+                    <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+                    <li><a href="progress.html" class="nav-link">Progress</a></li>
+                    <li><a href="resources.html" class="nav-link">Resources</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <!-- Content for the portfolio page -->
+
+    <main class="page-content">
+        <section class="portfolio-section fade-in">
+            <h2 class="section-title">Meet the Developer</h2>
+            <p>Hello, I’m an RT Embedded Engineer specializing in C/C++ on Linux. This platform showcases my dedication to delivering top-quality solutions. When I’m not optimizing systems, I’m exploring advanced AI tools for coding assistance.</p>
+
+            <div class="portfolio-highlights">
+                <div class="highlight-card glass card-hover floating-card">
+                    <h3>Background</h3>
+                    <ul>
+                        <li>B.Sc. in Computer Science</li>
+                        <li>10+ years in embedded software dev</li>
+                        <li>Expertise in real-time systems, OS internals</li>
+                    </ul>
+                </div>
+                <div class="highlight-card glass card-hover floating-card">
+                    <h3>Focus Areas</h3>
+                    <ul>
+                        <li>Low-level C/C++ programming</li>
+                        <li>Multi-threading and concurrency</li>
+                        <li>Performance tuning and memory optimization</li>
+                    </ul>
+                </div>
+                <div class="highlight-card glass card-hover floating-card">
+                    <h3>Project Goals</h3>
+                    <ul>
+                        <li>Create advanced learning modules</li>
+                        <li>Integrate AI-based code analytics</li>
+                        <li>Develop an interactive portfolio tool</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>© 2025 CodeForge++. All rights reserved.</p>
     </footer>
+
     <script src="scripts/main.js"></script>
 </body>
 </html>
