--- a/index.html
+++ b/index.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeForge++ | Home</title>
-    <link rel="stylesheet" href="styles/enhanced_styles.css" />
-    <link rel="stylesheet" href="styles/animations.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CodeForge++ | Home</title>
+  <link rel="stylesheet" href="styles/enhanced_styles.css" />
+  <link rel="stylesheet" href="styles/animations.css" />
 </head>
 <body>
-    <!-- Header with Modern Navigation -->
-    <header class="glass header-slide-in compact-header">
-        <div class="nav-container">
-            <h1 class="logo">CodeForge++</h1>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-                    <li><a href="progress.html" class="nav-link">Progress</a></li>
-                    <li><a href="resources.html" class="nav-link">Resources</a></li>
-                    <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <!-- Header with Modern Navigation -->
+  <header class="glass header-slide-in compact-header">
+    <div class="nav-container">
+      <!-- Updated logo with a more “rounded techy” style -->
+      <h1 class="logo">
+        <span class="logo-text">CodeForge++</span>
+        <span class="logo-icon">{<></>}</span> <!-- Just a playful bracket icon -->
+      </h1>
+      <nav>
+        <ul class="nav-menu">
+          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+          <li><a href="progress.html" class="nav-link">Progress</a></li>
+          <li><a href="resources.html" class="nav-link">Resources</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="resume.html" class="nav-link">Resume</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <!-- Hero Section -->
-    <section class="index-hero glass fade-in">
-        <h1 class="hero-title">Elevate Your C++ Skills</h1>
-        <p class="scale-up">Explore advanced concepts, challenge yourself with real-time tasks, and track your progression all in one place.</p>
-        <a href="exercises.html" class="btn btn-glow">Get Started</a>
-    </section>
+  <!-- Hero Section -->
+  <section class="index-hero glass fade-in">
+    <h1 class="hero-title">Elevate Your C++ Skills</h1>
+    <p class="scale-up">
+      Dive into advanced modules, real-world tasks, and measure your progress every step of the way.
+    </p>
+    <a href="exercises.html" class="btn btn-glow">Get Started</a>
+  </section>
 
-    <!-- Featured Highlights -->
-    <section class="features">
-        <div class="feature-card glass card-hover floating-card">
-            <h3>Practical Exercises</h3>
-            <p>Build real-world solutions and refine your approach with guided tasks.</p>
-        </div>
-        <div class="feature-card glass card-hover floating-card">
-            <h3>Smart Progress Tracking</h3>
-            <p>Analyze your development path with interactive charts and stats.</p>
-        </div>
-        <div class="feature-card glass card-hover floating-card">
-            <h3>AI Code Review</h3>
-            <p>Receive instant suggestions to optimize and improve your code.</p>
-        </div>
-    </section>
+  <!-- Featured Highlights -->
+  <section class="features">
+    <div class="feature-card glass card-hover floating-card">
+      <h3>Advanced Course</h3>
+      <p>Follow expert-level modules covering Embedded, RTOS, and concurrency topics.</p>
+    </div>
+    <div class="feature-card glass card-hover floating-card">
+      <h3>Smart Progress Tracking</h3>
+      <p>Analyze your journey with interactive charts and skill assessments.</p>
+    </div>
+    <div class="feature-card glass card-hover floating-card">
+      <h3>AI Code Review</h3>
+      <p>Receive suggestions to optimize and improve your code as you learn.</p>
+    </div>
+  </section>
 
-    <!-- Call-to-Action -->
-    <section class="cta glass fade-in">
-        <h2>Ready for the Next Challenge?</h2>
-        <a href="exercises.html" class="btn btn-glow">Jump In</a>
-    </section>
+  <!-- Call-to-Action -->
+  <section class="cta glass fade-in">
+    <h2>Ready for the Next Challenge?</h2>
+    <a href="exercises.html" class="btn btn-glow">Jump In</a>
+  </section>
 
-    <!-- Footer -->
-    <footer>
-        <p>© 2025 CodeForge++. All rights reserved.</p>
-    </footer>
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 CodeForge++. All rights reserved.</p>
+  </footer>
 
-    <script src="scripts/main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
