--- a/progress.html
+++ b/progress.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeForge++ | Progress</title>
-    <link rel="stylesheet" href="styles/enhanced_styles.css">
-    <link rel="stylesheet" href="styles/animations.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodeForge++ | Progress</title>
+  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body>
-    <header class="glass header-slide-in compact-header">
-        <div class="nav-container">
-            <h1 class="logo">CodeForge++</h1>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-                    <li><a href="resources.html" class="nav-link">Resources</a></li>
-                    <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-                </ul>
-            </nav>
+  <header class="glass header-slide-in compact-header">
+    <div class="nav-container">
+      <h1 class="logo">
+        <span class="logo-text">CodeForge++</span>
+        <span class="logo-icon">{<></>}</span>
+      </h1>
+      <nav>
+        <ul class="nav-menu">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+          <li><a href="resources.html" class="nav-link">Resources</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="resume.html" class="nav-link">Resume</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="page-content">
+    <section class="progress-section fade-in">
+      <h2 class="section-title">Your Learning Journey</h2>
+      <p>Keep track of completed modules, lessons, and quizzes.</p>
+
+      <div class="progress-bar-container">
+        <span id="progress-text" class="progress-label">
+          Progress: 0% (0/10 Exercises)
+        </span>
+        <div class="progress-bar glass">
+          <div class="progress" style="--progress: 0%"></div>
         </div>
-    </header>
+      </div>
 
-    <main class="page-content">
-        <section class="progress-section fade-in">
-            <h2 class="section-title">Your Learning Journey</h2>
-            <p>Keep track of completed exercises, achievements, and skill milestones.</p>
+      <!-- Additional achievements or badges can be listed here -->
+      <div id="achievements" style="margin-top:30px;"></div>
+    </section>
+  </main>
 
-            <div class="progress-bar-container">
-                <span id="progress-text" class="progress-label">Progress: 0% (0/10 Exercises)</span>
-                <div class="progress-bar glass">
-                    <div class="progress" style="--progress: 0%"></div>
-                </div>
-            </div>
+  <footer>
+    <p>© 2025 CodeForge++. All rights reserved.</p>
+  </footer>
 
-            <!-- Additional achievements or badges can be listed here -->
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 CodeForge++. All rights reserved.</p>
-    </footer>
-
-    <script src="scripts/main.js"></script>
-    <script src="scripts/progress.js"></script>
+  <script src="scripts/main.js"></script>
+  <script src="scripts/progress.js"></script>
 </body>
 </html>
