--- a/resources.html
+++ b/resources.html
@@ -1,60 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeForge++ | Resources</title>
-    <link rel="stylesheet" href="styles/enhanced_styles.css">
-    <link rel="stylesheet" href="styles/animations.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodeForge++ | Resources</title>
+  <link rel="stylesheet" href="styles/enhanced_styles.css">
+  <link rel="stylesheet" href="styles/animations.css">
 </head>
 <body>
-    <header class="glass header-slide-in compact-header">
-        <div class="nav-container">
-            <h1 class="logo">CodeForge++</h1>
-            <nav>
-                <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="exercises.html" class="nav-link">Exercises</a></li>
-                    <li><a href="progress.html" class="nav-link">Progress</a></li>
-                    <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
-                </ul>
-            </nav>
+  <header class="glass header-slide-in compact-header">
+    <div class="nav-container">
+      <h1 class="logo">
+        <span class="logo-text">CodeForge++</span>
+        <span class="logo-icon">{<></>}</span>
+      </h1>
+      <nav>
+        <ul class="nav-menu">
+          <li><a href="index.html" class="nav-link">Home</a></li>
+          <li><a href="exercises.html" class="nav-link">Exercises</a></li>
+          <li><a href="progress.html" class="nav-link">Progress</a></li>
+          <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
+          <li><a href="resume.html" class="nav-link">Resume</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main class="page-content">
+    <section class="resource-section fade-in">
+      <h2 class="section-title">C++ Learning Resources</h2>
+      <p>
+        Explore curated references, tutorials, and external links to deepen your understanding of modern C++.
+      </p>
+
+      <div class="resource-list">
+        <div class="resource-item glass card-hover floating-card">
+          <h3>cppreference.com</h3>
+          <p>Comprehensive documentation on C++ language features, STL, and more.</p>
+          <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
         </div>
-    </header>
 
-    <main class="page-content">
-        <section class="resource-section fade-in">
-            <h2 class="section-title">C++ Learning Resources</h2>
-            <p>Explore curated references, tutorials, and external links to deepen your understanding of modern C++.</p>
+        <div class="resource-item glass card-hover floating-card">
+          <h3>C++ ISO Standard Draft</h3>
+          <p>Official standards documentation (technical but thorough).</p>
+          <a href="https://isocpp.org/std/the-standard" target="_blank" class="btn">View Standard</a>
+        </div>
 
-            <div class="resource-list">
-                <div class="resource-item glass card-hover floating-card">
-                    <h3>cppreference.com</h3>
-                    <p>Comprehensive documentation on C++ language features, STL, and more.</p>
-                    <a href="https://en.cppreference.com/" target="_blank" class="btn">Visit Site</a>
-                </div>
+        <div class="resource-item glass card-hover floating-card">
+          <h3>Learn C++</h3>
+          <p>A beginner-friendly site covering fundamental to advanced topics.</p>
+          <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
+        </div>
+      </div>
+    </section>
+  </main>
 
-                <div class="resource-item glass card-hover floating-card">
-                    <h3>C++ ISO Standard Draft</h3>
-                    <p>Official standards documentation (technical but thorough).</p>
-                    <a href="https://isocpp.org/std/the-standard" target="_blank" class="btn">View Standard</a>
-                </div>
+  <footer>
+    <p>© 2025 CodeForge++. All rights reserved.</p>
+  </footer>
 
-                <div class="resource-item glass card-hover floating-card">
-                    <h3>Learn C++</h3>
-                    <p>A beginner-friendly site covering fundamental to advanced topics.</p>
-                    <a href="https://www.learncpp.com/" target="_blank" class="btn">Visit Site</a>
-                </div>
-
-                <!-- Add more resources as needed -->
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 CodeForge++. All rights reserved.</p>
-    </footer>
-
-    <script src="scripts/main.js"></script>
+  <script src="scripts/main.js"></script>
 </body>
 </html>
